--- a/notebooks/orientation_calculation.ipynb
+++ b/notebooks/orientation_calculation.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
+   "id": "bb219290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import illustris_python as il\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10b4338b-6f47-44f4-b600-dbb65a711abf",
    "metadata": {},
    "outputs": [
@@ -15,9 +27,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import illustris_python as il\n",
-    "from pathlib import Path\n",
+    "\n",
     "\n",
     "basePath = Path(\"../sims.TNG/TNG50-1/output\")\n",
     "snap = 99\n",
@@ -1995,7 +2005,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "COS-GASS (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -2009,7 +2019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
