--- a/notebooks/vis_spectra.ipynb
+++ b/notebooks/vis_spectra.ipynb
@@ -151,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cosgass",
+   "display_name": "COS-GASS (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
