Add COS_GASS_TNG data and update analysis notebooks
Added new data file data/COS_GASS_TNG.txt. Removed a large code block from orientation_calculation.ipynb and replaced it with a summary markdown cell. Added new analysis and plotting code to spectra.ipynb for comparing two runs and generating figures and reports. These changes support expanded analysis and data integration for TNG subhalo orientation and sightline comparison.

--- a/notebooks/orientation_calculation.ipynb
+++ b/notebooks/orientation_calculation.ipynb
@@ -1659,345 +1659,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1286b88-49cf-4049-9f17-24f2f4d7224b",
+   "id": "1efd889f",
    "metadata": {},
    "source": [
-    "### Trying ParticleProjectionPlots of YT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "b5eb0594-c3c7-4afe-aec3-cf1b1fe7418e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Orientation (SubhaloSpin (total)): inc=89.31 deg, PA=148.85 deg, N=422734\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "yt : [INFO     ] 2025-09-09 17:16:27,674 Parameters: current_time              = 0.0\n",
-      "yt : [INFO     ] 2025-09-09 17:16:27,677 Parameters: domain_dimensions         = [1 1 1]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:27,679 Parameters: domain_left_edge          = [-60.252364   -61.27822355 -62.50089602]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:27,681 Parameters: domain_right_edge         = [55.37960319 55.99673342 61.92033748]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:27,682 Parameters: cosmological_simulation   = 0\n",
-      "yt : [INFO     ] 2025-09-09 17:16:27,685 Allocating for 4.227e+05 particles\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rvir(host) = 251.9 kpc  -> depth slab = 755.8 kpc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "yt : [INFO     ] 2025-09-09 17:16:28,076 xlim = -32.436380 27.563620\n",
-      "yt : [INFO     ] 2025-09-09 17:16:28,077 ylim = -32.640745 27.359255\n",
-      "yt : [INFO     ] 2025-09-09 17:16:28,078 xlim = -32.436380 27.563620\n",
-      "yt : [INFO     ] 2025-09-09 17:16:28,078 ylim = -32.640745 27.359255\n",
-      "yt : [INFO     ] 2025-09-09 17:16:28,086 Splatting (('all', 'particle_mass')) onto a 800 by 800 mesh using method 'ngp'\n",
-      "yt : [INFO     ] 2025-09-09 17:16:28,444 Splatting (('all', 'particle_mass')) onto a 1400 by 1400 mesh using method 'ngp'\n",
-      "yt : [INFO     ] 2025-09-09 17:16:28,843 Saving plot yt_particle_views/sid253864_native_proj.png\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,337 Parameters: current_time              = 0.0\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,339 Parameters: domain_dimensions         = [1 1 1]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,340 Parameters: domain_left_edge          = [-62.60184321 -62.50103235 -47.52927464]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,342 Parameters: domain_right_edge         = [61.98012278 60.60533438 53.38138148]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,342 Parameters: cosmological_simulation   = 0\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,346 Allocating for 4.227e+05 particles\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,717 xlim = -30.310860 29.689140\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,718 ylim = -30.947849 29.052151\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,719 xlim = -30.310860 29.689140\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,720 ylim = -30.947849 29.052151\n",
-      "yt : [INFO     ] 2025-09-09 17:16:29,724 Splatting (('all', 'particle_mass')) onto a 800 by 800 mesh using method 'ngp'\n",
-      "yt : [INFO     ] 2025-09-09 17:16:30,299 Splatting (('all', 'particle_mass')) onto a 1400 by 1400 mesh using method 'ngp'\n",
-      "yt : [INFO     ] 2025-09-09 17:16:30,689 Saving plot yt_particle_views/sid253864_faceon_proj.png\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,472 Parameters: current_time              = 0.0\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,475 Parameters: domain_dimensions         = [1 1 1]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,477 Parameters: domain_left_edge          = [-336.96823566 -327.96260583  -63.43127367]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,478 Parameters: domain_right_edge         = [364.26013632 364.44655198  62.23954798]\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,479 Parameters: cosmological_simulation   = 0\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,484 Allocating for 4.227e+05 particles\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,811 xlim = -30.595863 29.404137\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,811 ylim = -16.354050 43.645950\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,812 xlim = -30.595863 29.404137\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,813 ylim = -16.354050 43.645950\n",
-      "yt : [INFO     ] 2025-09-09 17:16:31,817 Splatting (('all', 'particle_mass')) onto a 800 by 800 mesh using method 'ngp'\n",
-      "yt : [INFO     ] 2025-09-09 17:16:32,109 Splatting (('all', 'particle_mass')) onto a 1400 by 1400 mesh using method 'ngp'\n",
-      "yt : [INFO     ] 2025-09-09 17:16:32,457 Saving plot yt_particle_views/sid253864_edgeon_proj.png\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved PNGs in 'yt_particle_views' (mode=projection)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- deps ---\n",
-    "import os, numpy as np\n",
-    "import illustris_python as il\n",
-    "import yt\n",
-    "\n",
-    "# ---------------- USER CONFIG ----------------\n",
-    "basePath = \"../sims.TNG/TNG50-1/output\"    # EDIT\n",
-    "snap     = 99\n",
-    "sid      = 253864\n",
-    "partType = \"stars\"                     # \"stars\" or \"gas\"\n",
-    "\n",
-    "# Choose visualization mode:\n",
-    "USE_PROJECTION = True   # True -> ParticleProjectionPlot (deposited, slab depth)\n",
-    "                        # False -> ParticlePlot (scatter-like, we prefilter slab)\n",
-    "\n",
-    "# Geometry / selection\n",
-    "use_stellar_spin   = False         # True: compute stellar-only spin from cutout; False: use SubhaloSpin\n",
-    "use_rhalf_aperture = True\n",
-    "rhalf_multiplier   = 5.0           # aperture in units of stellar half-mass radius\n",
-    "width_kpc          = 60.0          # plot width\n",
-    "depth_factor_Rvir  = 3.0           # LOS depth = 3 Rvir (i.e., ±1.5 Rvir)\n",
-    "dpi_out            = 300\n",
-    "buff_px            = 1400\n",
-    "\n",
-    "# ---------------- helpers ----------------\n",
-    "def unit(v):\n",
-    "    n = np.linalg.norm(v)\n",
-    "    return v/n if n>0 else v\n",
-    "\n",
-    "def rotation_u_to_v(u, v):\n",
-    "    u, v = unit(u), unit(v)\n",
-    "    c = np.clip(np.dot(u, v), -1, 1)\n",
-    "    if c > 1-1e-12: return np.eye(3)\n",
-    "    if c < -1+1e-12:\n",
-    "        a = unit(np.cross(u, [1,0,0]) if abs(u[0])<0.9 else unit(np.cross(u, [0,1,0])))\n",
-    "        return -np.eye(3) + 2*np.outer(a,a)\n",
-    "    a = unit(np.cross(u, v)); s = np.linalg.norm(np.cross(u, v))\n",
-    "    K = np.array([[0,-a[2],a[1]],[a[2],0,-a[0]],[-a[1],a[0],0]])\n",
-    "    return np.eye(3) + K*s + (K@K)*((1-c)/(s**2))\n",
-    "\n",
-    "def inc_PA_from_J(J):\n",
-    "    J = np.asarray(J,float); Jn = np.linalg.norm(J)\n",
-    "    if Jn==0: return np.nan, np.nan\n",
-    "    Jh = J / Jn\n",
-    "    inc = np.degrees(np.arccos(np.clip(abs(Jh[2]), 0, 1)))  # 0° face-on, 90° edge-on\n",
-    "    n = np.cross([0,0,1.0], Jh)                             # line of nodes (in XY)\n",
-    "    PA = 0.0 if np.hypot(n[0],n[1])<1e-14 else (np.degrees(np.arctan2(n[1],n[0])) % 180.0)\n",
-    "    return inc, PA\n",
-    "\n",
-    "def recenter_pbc(X, center, box):\n",
-    "    Xc = (X - center) % box\n",
-    "    Xc[Xc > box/2] -= box\n",
-    "    return Xc\n",
-    "\n",
-    "def get_host_Rvir_kpc(basePath, snap, sh, h):\n",
-    "    # robust host R200c lookup\n",
-    "    grnr_raw = sh[\"SubhaloGrNr\"]\n",
-    "    try:\n",
-    "        grnr = int(np.asarray(grnr_raw).item())\n",
-    "    except Exception:\n",
-    "        grnr = int(grnr_raw)\n",
-    "    try:\n",
-    "        halos = il.groupcat.loadHalos(basePath, snap, fields=[\"Group_R_Crit200\"])\n",
-    "        R_ckpch = float(np.asarray(halos[\"Group_R_Crit200\"]).astype(float)[grnr])\n",
-    "        return R_ckpch / h\n",
-    "    except Exception:\n",
-    "        # fallback from stellar size if halos array not available\n",
-    "        rhalf_ckpch = float(sh[\"SubhaloHalfmassRadType\"][4])\n",
-    "        return 20.0 * (rhalf_ckpch / h)\n",
-    "\n",
-    "def to_yt_particle_ds(pos_kpc, mass_msun, bbox_kpc=None):\n",
-    "    data = {\n",
-    "        \"particle_position_x\": pos_kpc[:, 0],\n",
-    "        \"particle_position_y\": pos_kpc[:, 1],\n",
-    "        \"particle_position_z\": pos_kpc[:, 2],\n",
-    "        \"particle_mass\":       mass_msun,\n",
-    "    }\n",
-    "    if bbox_kpc is None:\n",
-    "        mins = pos_kpc.min(axis=0); maxs = pos_kpc.max(axis=0)\n",
-    "        bbox_kpc = np.vstack([mins, maxs]).T\n",
-    "    ds = yt.load_particles(data, length_unit=\"kpc\", mass_unit=\"Msun\", bbox=bbox_kpc)\n",
-    "    return ds\n",
-    "\n",
-    "# ---------------- LOAD SUBHALO CUTOUT ----------------\n",
-    "gattrs = il.groupcat.loadHeader(basePath, snap)\n",
-    "box   = float(gattrs[\"BoxSize\"])         # ckpc/h\n",
-    "h     = float(gattrs[\"HubbleParam\"])     # h\n",
-    "\n",
-    "sh    = il.groupcat.loadSingle(basePath, snap, subhaloID=sid)\n",
-    "center = np.array(sh[\"SubhaloPos\"], float)       # ckpc/h\n",
-    "rhalf  = float(sh[\"SubhaloHalfmassRadType\"][4])  # ckpc/h (stars)\n",
-    "\n",
-    "fields = [\"Coordinates\",\"Masses\",\"Velocities\"]\n",
-    "if partType == \"gas\":\n",
-    "    fields += [\"StarFormationRate\"]\n",
-    "parts = il.snapshot.loadSubhalo(basePath, snap, sid, partType=partType, fields=fields)\n",
-    "X = np.asarray(parts[\"Coordinates\"], float)      # ckpc/h\n",
-    "M = np.asarray(parts[\"Masses\"], float)           # 1e10 Msun/h\n",
-    "V = np.asarray(parts[\"Velocities\"], float)       # km/s\n",
-    "\n",
-    "# keep only SF gas if desired\n",
-    "if partType == \"gas\" and \"StarFormationRate\" in parts:\n",
-    "    sfr = np.asarray(parts[\"StarFormationRate\"], float)\n",
-    "    sel = sfr > 0\n",
-    "    X, M, V = X[sel], M[sel], V[sel]\n",
-    "\n",
-    "# periodic recenter + aperture\n",
-    "Xc = recenter_pbc(X, center, box)\n",
-    "if use_rhalf_aperture and rhalf > 0:\n",
-    "    R = np.linalg.norm(Xc, axis=1)\n",
-    "    sel = R <= rhalf_multiplier * rhalf\n",
-    "    if np.any(sel):\n",
-    "        Xc, M, V = Xc[sel], M[sel], V[sel]\n",
-    "\n",
-    "# orientation vector\n",
-    "if use_stellar_spin:\n",
-    "    J = np.sum(np.cross(Xc, V) * M[:,None], axis=0)  # direction only\n",
-    "    source = f\"stellar spin ({rhalf_multiplier:.0f}×R_half)\"\n",
-    "else:\n",
-    "    J = np.array(sh[\"SubhaloSpin\"], float)\n",
-    "    source = \"SubhaloSpin (total)\"\n",
-    "\n",
-    "inc, PA = inc_PA_from_J(J)\n",
-    "print(f\"Orientation ({source}): inc={inc:.2f} deg, PA={PA:.2f} deg, N={len(M)}\")\n",
-    "\n",
-    "# rotations\n",
-    "Jh     = unit(J)\n",
-    "R_face = rotation_u_to_v(Jh, np.array([0,0,1.0]))   # spin -> +z (face-on)\n",
-    "R_ey   = rotation_u_to_v(Jh, np.array([0,1,0.0]))   # spin -> +y (XZ edge-on)\n",
-    "\n",
-    "# rotate coords (ckpc/h)\n",
-    "X_native = Xc\n",
-    "X_face   = Xc @ R_face.T\n",
-    "X_edge   = Xc @ R_ey.T\n",
-    "\n",
-    "# convert to kpc / Msun\n",
-    "Xn = X_native / h\n",
-    "Xf = X_face   / h\n",
-    "Xe = X_edge   / h\n",
-    "Ms = M * 1e10 / h\n",
-    "\n",
-    "# depth = 3 Rvir\n",
-    "Rvir_kpc  = get_host_Rvir_kpc(basePath, snap, sh, h)\n",
-    "depth_kpc = depth_factor_Rvir * Rvir_kpc\n",
-    "half_depth = 0.5 * depth_kpc\n",
-    "print(f\"Rvir(host) = {Rvir_kpc:.1f} kpc  -> depth slab = {depth_kpc:.1f} kpc\")\n",
-    "\n",
-    "# -------------- BUILD AND SAVE PLOTS --------------\n",
-    "outdir = \"yt_particle_views\"; os.makedirs(outdir, exist_ok=True)\n",
-    "\n",
-    "def annotate_spin_and_plane(ax, Jh, width_kpc, native=True):\n",
-    "    \"\"\"Draw spin projection (cyan) and line-of-nodes (magenta, native XY only).\"\"\"\n",
-    "    L = 0.4*(width_kpc/2.0)\n",
-    "    if native:\n",
-    "        # project spin into XY\n",
-    "        jxy = np.array([Jh[0], Jh[1]])\n",
-    "        if np.linalg.norm(jxy) > 0:\n",
-    "            jxy = jxy/np.linalg.norm(jxy)\n",
-    "            ax.arrow(0, 0, L*jxy[0], L*jxy[1], color='cyan', head_width=0.6, length_includes_head=True)\n",
-    "            ax.text(L*jxy[0]*1.03, L*jxy[1]*1.03, \"spin proj\", color='cyan', fontsize=9,\n",
-    "                    ha='left', va='bottom', bbox=dict(facecolor=(0,0,0,0.35), edgecolor='none', pad=2))\n",
-    "        # line of nodes (z × J) in XY\n",
-    "        n = np.cross([0,0,1.0], Jh)\n",
-    "        nxy = np.array([n[0], n[1]])\n",
-    "        if np.linalg.norm(nxy) > 0:\n",
-    "            nxy = nxy/np.linalg.norm(nxy)\n",
-    "            ax.arrow(0, 0, L*nxy[0], L*nxy[1], color='magenta', head_width=0.6, length_includes_head=True)\n",
-    "            ax.text(L*nxy[0]*1.03, L*nxy[1]*1.03, \"line of nodes\", color='magenta', fontsize=9,\n",
-    "                    ha='left', va='bottom', bbox=dict(facecolor=(0,0,0,0.35), edgecolor='none', pad=2))\n",
-    "    else:\n",
-    "        # edge-on XZ view: draw minor axis (+z) as cue\n",
-    "        ax.arrow(0, 0, 0, L, color='cyan', head_width=0.6, length_includes_head=True)\n",
-    "        ax.text(0, L*1.03, \"minor axis (+z)\", color='cyan', fontsize=9,\n",
-    "                ha='left', va='bottom', bbox=dict(facecolor=(0,0,0,0.35), edgecolor='none', pad=2))\n",
-    "\n",
-    "def save_particle_projection(pos_kpc, fname, axis, title, annotate_native=False, annotate_edge=False):\n",
-    "    # projection with slab\n",
-    "    ds = to_yt_particle_ds(pos_kpc, Ms)  # bbox auto from points\n",
-    "    p  = yt.ParticleProjectionPlot(ds, axis, (\"all\",\"particle_mass\"),\n",
-    "                                   width=(width_kpc,\"kpc\"), depth=(depth_kpc,\"kpc\"), center=\"c\")\n",
-    "    p.set_cmap((\"all\",\"particle_mass\"), \"viridis\")\n",
-    "    p.set_log((\"all\",\"particle_mass\"), True)\n",
-    "    p.set_axes_unit(\"kpc\")\n",
-    "    p.set_buff_size((buff_px, buff_px))\n",
-    "    p.annotate_title(title + f\" | depth={depth_kpc:.1f} kpc\")\n",
-    "    ax = p.plots[(\"all\",\"particle_mass\")].axes\n",
-    "    if annotate_native:\n",
-    "        annotate_spin_and_plane(ax, Jh, width_kpc, native=True)\n",
-    "    if annotate_edge:\n",
-    "        annotate_spin_and_plane(ax, Jh, width_kpc, native=False)\n",
-    "    p.save(os.path.join(outdir, fname))\n",
-    "\n",
-    "def save_particle_scatter(pos_kpc, fname, title, slab_filter=True):\n",
-    "    # scatter style; pre-filter a slab if requested\n",
-    "    if slab_filter:\n",
-    "        sel = np.abs(pos_kpc[:,2]) <= half_depth\n",
-    "        pos_kpc = pos_kpc[sel]\n",
-    "        mass    = Ms[sel]\n",
-    "    else:\n",
-    "        mass    = Ms\n",
-    "    # Build tiny bbox around the FoV to avoid domain overflow\n",
-    "    L = width_kpc/2.0\n",
-    "    bbox = np.array([[-L, L], [-L, L], [-L, L]])\n",
-    "    ds = to_yt_particle_ds(pos_kpc, mass, bbox_kpc=bbox)\n",
-    "    pp = yt.ParticlePlot(ds, (\"all\",\"particle_position_x\"),\n",
-    "                             (\"all\",\"particle_position_y\"),\n",
-    "                             (\"all\",\"particle_mass\"))\n",
-    "    pp.set_unit((\"all\",\"particle_mass\"), \"Msun\")\n",
-    "    pp.set_window_size(width_kpc)    # makes extent square of width_kpc\n",
-    "    pp.set_buff_size(buff_px)\n",
-    "    pp.annotate_title(title + (\" | slab prefilter\" if slab_filter else \"\"))\n",
-    "    # annotate on axes\n",
-    "    ax = pp.plots[(\"all\",\"particle_mass\")].axes\n",
-    "    annotate_spin_and_plane(ax, Jh, width_kpc, native=True)\n",
-    "    pp.save(os.path.join(outdir, fname))\n",
-    "\n",
-    "# --- Save views ---\n",
-    "Jh = unit(J)\n",
-    "\n",
-    "if USE_PROJECTION:\n",
-    "    # Native XY (axis='z')\n",
-    "    save_particle_projection(Xn, f\"sid{sid}_native_proj.png\", axis=\"z\",\n",
-    "                             title=f\"Native XY (inc={inc:.1f}°, PA={PA:.1f}°)\",\n",
-    "                             annotate_native=True)\n",
-    "    # Face-on (spin -> +z)\n",
-    "    save_particle_projection(Xf, f\"sid{sid}_faceon_proj.png\", axis=\"z\",\n",
-    "                             title=\"Face-on (spin → +z)\")\n",
-    "    # Edge-on XZ (spin -> +y) → project along y\n",
-    "    save_particle_projection(Xe, f\"sid{sid}_edgeon_proj.png\", axis=\"y\",\n",
-    "                             title=\"Edge-on XZ (spin → +y)\", annotate_edge=True)\n",
-    "else:\n",
-    "    # Native XY scatter with slab pre-filter to mimic depth\n",
-    "    save_particle_scatter(Xn.copy(), f\"sid{sid}_native_scatter.png\",\n",
-    "                          title=f\"Native XY (inc={inc:.1f}°, PA={PA:.1f}°)\",\n",
-    "                          slab_filter=True)\n",
-    "    # Face-on scatter (spin → +z): a thin disk should look round\n",
-    "    save_particle_scatter(Xf.copy(), f\"sid{sid}_faceon_scatter.png\",\n",
-    "                          title=\"Face-on (spin → +z)\", slab_filter=True)\n",
-    "    # Edge-on XZ scatter (spin → +y): project along y ⇒ image is XZ\n",
-    "    # Just rename columns: we rotated coords already, so pass Xe and set “x= X, y= Z” by swapping axes.\n",
-    "    Xe_swap = Xe[:, [0,2,1]]  # put z into 'y' column position\n",
-    "    save_particle_scatter(Xe_swap.copy(), f\"sid{sid}_edgeon_scatter.png\",\n",
-    "                          title=\"Edge-on XZ (spin → +y)\", slab_filter=True)\n",
-    "\n",
-    "print(f\"Saved PNGs in '{outdir}' (mode={'projection' if USE_PROJECTION else 'scatter'})\")"
+    "### Orientation Calculation for all the TNG Subhalos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9acfc46-d914-462e-8378-df12e9f3d204",
+   "id": "f9d40d86",
    "metadata": {},
    "outputs": [],
    "source": []
