--- a/notebooks/orientation_calculation.ipynb
+++ b/notebooks/orientation_calculation.ipynb
@@ -1676,7 +1676,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COS-GASS (3.12.12)",
+   "display_name": "cos-gass",
    "language": "python",
    "name": "python3"
   },
