--- a/notebooks/orientation_calculation.ipynb
+++ b/notebooks/orientation_calculation.ipynb
@@ -1667,7 +1667,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "id": "3c3ca83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/tsingh65/github_repos/COS-GASS/notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "f9d40d86",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1767,7 @@
       "[71/72] sid=642220  Galaxy=J0914+0836  method=pca_v3\n",
       "[72/72] sid=646733  Galaxy=J1509+0704  method=pca_v3\n",
       "\n",
-      "[OK] Wrote summary: /Users/wavefunction/github_repos/COS-GASS/data/orientation_summary_snap99.csv\n",
+      "[OK] Wrote summary: ../data/orientation_summary_snap99.csv\n",
       "   Columns include: inc_tot_deg, inc_star_deg, PCA_major2D_XY_deg, rho/phi/Rvir used,\n",
       "   paths to debug image + orientation JSON, and orientation_method (pca_v3 or stellar_spin).\n"
      ]
@@ -1801,16 +1819,30 @@
     "# ──────────────────────────────────────────────────────────────────────\n",
     "# USER PATHS (edit only if your local paths change)\n",
     "# ──────────────────────────────────────────────────────────────────────\n",
+    "\n",
+    "\n",
     "SNAP        = 99\n",
-    "REPO_ROOT   = r\"/Users/wavefunction/github_repos/COS-GASS\"\n",
+    "# REPO_ROOT   = r\"/Users/wavefunction/github_repos/COS-GASS\"\n",
+    "\n",
+    "# MATCHES_CSV = os.path.join(REPO_ROOT, \"data\", \"COS_GASS_TNG.txt\")\n",
+    "\n",
+    "# GROUPCAT_BASE = r\"/Users/wavefunction/ASU Dropbox/Tanmay Singh/COS_GASS\"  # contains groups_099/\n",
+    "# CUTOUT_ROOT   = r\"/Users/wavefunction/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\"\n",
+    "\n",
+    "# SUMMARY_CSV   = os.path.join(REPO_ROOT, \"data\", \"orientation_summary_snap99.csv\")\n",
+    "\n",
+    "\n",
+    "REPO_ROOT   = r\"../\"\n",
     "\n",
     "MATCHES_CSV = os.path.join(REPO_ROOT, \"data\", \"COS_GASS_TNG.txt\")\n",
     "\n",
-    "GROUPCAT_BASE = r\"/Users/wavefunction/ASU Dropbox/Tanmay Singh/COS_GASS\"  # contains groups_099/\n",
-    "CUTOUT_ROOT   = r\"/Users/wavefunction/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\"\n",
+    "GROUPCAT_BASE = r\"../../../ASU Dropbox/Tanmay Singh/COS_GASS\"  # contains groups_099/\n",
+    "CUTOUT_ROOT   = r\"../../../ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\"\n",
     "\n",
     "SUMMARY_CSV   = os.path.join(REPO_ROOT, \"data\", \"orientation_summary_snap99.csv\")\n",
     "\n",
+    "\n",
+    "'/Users/tsingh65/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos/sub_491426'\n",
     "# ──────────────────────────────────────────────────────────────────────\n",
     "# ORIENTATION OVERRIDE\n",
     "# ──────────────────────────────────────────────────────────────────────\n",
@@ -2603,7 +2635,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "id": "06e98880",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/tsingh65/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\n",
+      "/Users/tsingh65/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "a = Path(\"..\", \"..\", \"..\", \"ASU Dropbox\", \"Tanmay Singh\", \"COS_GASS\", \"TNG_Subhalos\").resolve()\n",
+    "p = '/Users/tsingh65/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos'\n",
+    "print(a)\n",
+    "print(p)\n",
+    "print(a == Path(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "93b5d192",
    "metadata": {},
    "outputs": [
@@ -2611,7 +2668,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote 72 pages → /Users/wavefunction/github_repos/COS-GASS/data/debug_panels_snap99.pdf\n"
+      "Wrote 72 pages → /Users/tsingh65/github_repos/COS-GASS/data/debug_panels_snap99.pdf\n"
      ]
     }
    ],
@@ -2621,8 +2678,11 @@
     "from PIL import Image\n",
     "\n",
     "SNAP = 99\n",
-    "REPO_ROOT  = r\"/Users/wavefunction/github_repos/COS-GASS\"\n",
-    "CUTOUT_ROOT= r\"/Users/wavefunction/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\"\n",
+    "# REPO_ROOT  = r\"/Users/wavefunction/github_repos/COS-GASS\"\n",
+    "# CUTOUT_ROOT= r\"/Users/wavefunction/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\"\n",
+    "\n",
+    "REPO_ROOT  = r\"/Users/tsingh65/github_repos/COS-GASS\"\n",
+    "CUTOUT_ROOT= r\"/Users/tsingh65/ASU Dropbox/Tanmay Singh/COS_GASS/TNG_Subhalos\"\n",
     "\n",
     "# Find all debug images saved by your pipeline\n",
     "pattern = os.path.join(CUTOUT_ROOT, \"sub_*\", \"analysis\", f\"debug_sid*_snap{SNAP}.png\")\n",
@@ -2646,7 +2706,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cos-gass",
+   "display_name": "COS-GASS (3.12.12)",
    "language": "python",
    "name": "python3"
   },
