Add COS_GASS_TNG_Complete data and update notebook
Added the COS_GASS_TNG_Complete.txt data file to the data directory. Updated the Jupyter notebook kernelspec display name to 'cos-gass' for consistency.

--- a/notebooks/orientation_calculation.ipynb
+++ b/notebooks/orientation_calculation.ipynb
@@ -2706,7 +2706,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COS-GASS (3.12.12)",
+   "display_name": "cos-gass",
    "language": "python",
    "name": "python3"
   },
