Add run2 SID extraction for previously skipped galaxies
Introduces a new script in spectra_gen.ipynb to extract SubhaloIDs for galaxies previously skipped due to missing inclination, using the updated 'Complete' catalog. Adds output files sids_with_inc_run2.txt and sids_with_inc_detailed_run2.csv containing the selected SubhaloIDs and their metadata. Also updates catalog path and kernel display name in the notebook.

--- a/notebooks/spectra_gen.ipynb
+++ b/notebooks/spectra_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e638118b",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "CATALOG_CSV = r\"../data/COS_GASS_TNG.txt\"\n",
+    "CATALOG_CSV = r\"../data/COS_GASS_TNG_.txt\"\n",
     "REPO_DATA   = os.path.dirname(CATALOG_CSV)\n",
     "\n",
     "OUT_TXT     = os.path.join(REPO_DATA, \"sids_with_inc.txt\")\n",
@@ -104,6 +104,154 @@
     "    print(\"  • Skipped (inc='-'): \", OUT_SKIPPED)\n",
     "    if len(dfl) == 0:\n",
     "        print(\"[STEP1][WARN] No subhalos selected. Did your catalog have numeric 'inc' values?\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "522f8249",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[RUN2] Loading previously skipped galaxy list: ../data/sids_skipped_by_inc.csv\n",
+      "[RUN2] Loading updated 'Complete' catalog: ../data/COS_GASS_TNG_Complete.txt\n",
+      "[RUN2] Previously skipped galaxies: 5\n",
+      "[RUN2] Rows in 'Complete' matching skipped COS_IDs: 5\n",
+      "[RUN2] Matching rows with numeric 'inc' now available: 5\n",
+      "[RUN2] Unique SubhaloID to run (run2): 20\n",
+      "\n",
+      "[RUN2] Outputs written:\n",
+      "  • SIDs list (run2):               ../data/sids_with_inc_run2.txt\n",
+      "  • Detailed include (run2):        ../data/sids_with_inc_detailed_run2.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python3\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "\"\"\"\n",
+    "STEP 1 (run2): Build SID list **only** for galaxies that were previously skipped\n",
+    "because of missing inclination, using the updated 'Complete' catalog that now\n",
+    "includes those inclinations.\n",
+    "\n",
+    "Inputs (relative to this script):\n",
+    "  - ../data/sids_skipped_by_inc.csv            (from run1; the galaxies to revisit)\n",
+    "  - ../data/COS_GASS_TNG_Complete.txt          (new catalog with inclinations filled)\n",
+    "\n",
+    "Outputs:\n",
+    "  - ../data/sids_with_inc_run2.txt             (one unique SubhaloID per line)\n",
+    "  - ../data/sids_with_inc_detailed_run2.csv    (per-galaxy mapping with COS_ID, Galaxy, inc, SubhaloID)\n",
+    "\"\"\"\n",
+    "\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# -------------------- Paths --------------------\n",
+    "REPO_DATA        = r\"../data\"\n",
+    "SKIPPED_PREV_CSV = os.path.join(REPO_DATA, \"sids_skipped_by_inc.csv\")\n",
+    "CATALOG_COMPLETE = os.path.join(REPO_DATA, \"COS_GASS_TNG_Complete.txt\")\n",
+    "\n",
+    "OUT_TXT2    = os.path.join(REPO_DATA, \"sids_with_inc_run2.txt\")\n",
+    "OUT_DETAIL2 = os.path.join(REPO_DATA, \"sids_with_inc_detailed_run2.csv\")\n",
+    "\n",
+    "\n",
+    "def _coerce_int_series(s):\n",
+    "    \"\"\"Safely coerce a Series to integer where possible; returns object dtype.\"\"\"\n",
+    "    x = pd.to_numeric(s, errors=\"coerce\")\n",
+    "    # Keep as object so we can drop NaNs and cast to Python int later where valid\n",
+    "    return x.astype(\"Int64\").astype(object)\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    print(\"[RUN2] Loading previously skipped galaxy list:\", SKIPPED_PREV_CSV)\n",
+    "    if not os.path.isfile(SKIPPED_PREV_CSV):\n",
+    "        raise FileNotFoundError(f\"Missing: {SKIPPED_PREV_CSV}\")\n",
+    "\n",
+    "    print(\"[RUN2] Loading updated 'Complete' catalog:\", CATALOG_COMPLETE)\n",
+    "    if not os.path.isfile(CATALOG_COMPLETE):\n",
+    "        raise FileNotFoundError(f\"Missing: {CATALOG_COMPLETE}\")\n",
+    "\n",
+    "    # Load the \"skipped\" set from run1 (these are the only galaxies we consider now)\n",
+    "    skipped = pd.read_csv(SKIPPED_PREV_CSV)\n",
+    "    if \"COS_ID\" not in skipped.columns:\n",
+    "        raise KeyError(\"Expected 'COS_ID' column in sids_skipped_by_inc.csv\")\n",
+    "    # Canonicalize COS_ID to int-like for a clean join key\n",
+    "    skipped[\"COS_ID\"] = pd.to_numeric(skipped[\"COS_ID\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "    skipped_ids = set([int(v) for v in skipped[\"COS_ID\"].dropna().tolist()])\n",
+    "\n",
+    "    print(f\"[RUN2] Previously skipped galaxies: {len(skipped_ids)}\")\n",
+    "\n",
+    "    # Load the new complete catalog; treat '-' and empty as NaN across the board\n",
+    "    complete = pd.read_csv(CATALOG_COMPLETE, na_values=[\"-\", \"\"])\n",
+    "    if \"COS_ID\" not in complete.columns:\n",
+    "        raise KeyError(\"Expected 'COS_ID' column in COS_GASS_TNG_Complete.txt\")\n",
+    "\n",
+    "    # Filter complete catalog to the COS_IDs that were previously skipped\n",
+    "    complete[\"COS_ID\"] = pd.to_numeric(complete[\"COS_ID\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "    df = complete[complete[\"COS_ID\"].isin(skipped_ids)].copy()\n",
+    "    print(f\"[RUN2] Rows in 'Complete' matching skipped COS_IDs: {len(df)}\")\n",
+    "\n",
+    "    # Force numeric inclination and keep only those now available\n",
+    "    if \"inc\" not in df.columns:\n",
+    "        raise KeyError(\"Expected 'inc' column in COS_GASS_TNG_Complete.txt\")\n",
+    "\n",
+    "    df[\"inc\"] = pd.to_numeric(df[\"inc\"], errors=\"coerce\")\n",
+    "    df_keep = df[df[\"inc\"].notna()].copy()\n",
+    "    print(f\"[RUN2] Matching rows with numeric 'inc' now available: {len(df_keep)}\")\n",
+    "\n",
+    "    # Prepare SID columns; ensure presence and numeric coercion\n",
+    "    sid_cols = [\"SubhaloID1\", \"SubhaloID2\", \"SubhaloID3\", \"SubhaloID4\"]\n",
+    "    for c in sid_cols:\n",
+    "        if c not in df_keep.columns:\n",
+    "            df_keep[c] = np.nan\n",
+    "        df_keep[c] = pd.to_numeric(df_keep[c], errors=\"coerce\")\n",
+    "\n",
+    "    # Build long format: one SID per row, tagged with galaxy metadata\n",
+    "    rows = []\n",
+    "    for _, r in df_keep.iterrows():\n",
+    "        base = {\n",
+    "            \"COS_ID\": int(r[\"COS_ID\"]) if pd.notna(r[\"COS_ID\"]) else None,\n",
+    "            \"Galaxy\": r[\"Galaxy\"] if \"Galaxy\" in df_keep.columns else None,\n",
+    "            \"inc\": float(r[\"inc\"]),\n",
+    "        }\n",
+    "        for c in sid_cols:\n",
+    "            sid = r[c]\n",
+    "            if pd.notna(sid):\n",
+    "                sid_int = int(sid)\n",
+    "                rows.append({**base, \"SubhaloID\": sid_int})\n",
+    "\n",
+    "    dfl = pd.DataFrame(rows)\n",
+    "    if not dfl.empty:\n",
+    "        dfl = dfl.drop_duplicates(subset=[\"SubhaloID\"]).sort_values(\"SubhaloID\")\n",
+    "    print(f\"[RUN2] Unique SubhaloID to run (run2): {len(dfl)}\")\n",
+    "\n",
+    "    # Write outputs\n",
+    "    os.makedirs(REPO_DATA, exist_ok=True)\n",
+    "\n",
+    "    # Detailed CSV\n",
+    "    dfl.to_csv(OUT_DETAIL2, index=False)\n",
+    "\n",
+    "    # Plain-text list\n",
+    "    with open(OUT_TXT2, \"w\") as f:\n",
+    "        for sid in dfl[\"SubhaloID\"].tolist():\n",
+    "            f.write(f\"{sid}\\n\")\n",
+    "\n",
+    "    print(\"\\n[RUN2] Outputs written:\")\n",
+    "    print(\"  • SIDs list (run2):              \", OUT_TXT2)\n",
+    "    print(\"  • Detailed include (run2):       \", OUT_DETAIL2)\n",
+    "\n",
+    "    if len(dfl) == 0:\n",
+    "        print(\"[RUN2][WARN] No subhalos selected. Either the 'Complete' catalog still lacks \"\n",
+    "              \"inclinations for these COS_IDs or SubhaloID1..4 are all missing.\")\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
@@ -307,7 +455,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COS-GASS (3.12.12)",
+   "display_name": "cos-gass",
    "language": "python",
    "name": "python3"
   },
